--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
-    "version": 2,
-    "builds": [
-     {
-      "src": "/src/main.tsx",
-      "use": "@vercel/node"
-     }
-    ],
-    "routes": [
-     {
-      "src": "/(.*)",
-      "dest": "/src/"
-     }
-    ]
-   }
+  "buildCommand": "npm run build",
+  "framework": "vite"
+}
